bloquer l'url parametre pour la production

--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -188,7 +188,7 @@
 								DÉCONNEXION
 							</a>
 						</li>
-						<li>
+						<li *ngIf="loggedInUserRole==='Admin' || loggedInUserRole==='SuperAdmin'">
 							<a [routerLink]="['/navigation/users/parameters']"
 								class="dropdown-item">
 								PARAMÈTRES
